--- a/views/work.html
+++ b/views/work.html
@@ -29,6 +29,9 @@
     </p>
     <ul>
         <li>
+            <a href="/readme">Readme</a>
+        </li>
+        <li>
             <a href="/">Home page</a>
         </li>
         <li>
