--- a/views/admin.html
+++ b/views/admin.html
@@ -44,6 +44,9 @@
     </p>
     <ul>
         <li>
+            <a href="/readme">Readme</a>
+        </li>
+        <li>
             <a href="/">Home page</a>
         </li>
         <li>
