documentation, api refinements, work in progress

--- a/views/admin.html
+++ b/views/admin.html
@@ -42,19 +42,21 @@
     <p>
         Access other pages:
     </p>
-    <ul>
-        <li>
-            <a href="/readme">Readme</a>
-        </li>
-        <li>
-            <a href="/">Home page</a>
-        </li>
-        <li>
-            <a href="/work">Work page</a>
-        </li>
-        <li>
-            <a href="/logout">Logout</a>
-        </li>
-    </ul>
+    <div class="nav">
+        <ul>
+            <li>
+                <a href="/readme">Readme</a>
+            </li>
+            <li>
+                <a href="/">Home page</a>
+            </li>
+            <li>
+                <a href="/work">Work page</a>
+            </li>
+            <li>
+                <a href="/logout">Logout</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
