--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,19 +5,67 @@ html {
 
 body {
     padding: 50px;
-    font: 15px "Lucida Grande", Helvetica, Arial, sans-serif;
+    /*font: 15px "Lucida Grande", Helvetica, Arial, sans-serif;*/
+    font-family: 'Microsoft YaHei';
     margin-left: auto;
     margin-right: auto;
     max-width: 1024px;
     background: white;
-    height: calc(100% - 10px);
+    min-height: calc(100% - 30px);
+    line-height: 1.5em;
 }
 
 h1 {
     text-align: center;
+    color: #555;
+}
+
+h1.header {
     border-bottom: 1px solid #ccc;
+    font-size: 2.5em;
+    font-weight: bold;
+    padding: 0.3em 0;
+}
+
+h2 {
+    color: #555;
+}
+    h2:before {
+        content: '\00bb-';
+    }
+
+h3.header {
+    text-align: center;
+}
+
+.nav {
+    border-top: 1px solid #ccc;
 }
 
 a {
     color: #00b7ff;
+}
+
+p {
+    text-indent: 1em;
+}
+
+li > p {
+    text-indent: 0;
+    margin: 0 0 10px 0;
+}
+
+li > pre {
+    margin: 5px 0;
+}
+
+pre {
+    background: #f5f5f5;
+    padding: 5px 0;
+    margin: 5px 0;
+}
+
+code {
+    padding: 5px;
+    background: #f5f5f5;
 }
