--- a/views/index.html
+++ b/views/index.html
@@ -26,23 +26,25 @@
     <p>
         Access other pages:
     </p>
-    <ul>
-        <li>
-            <a href="/readme">Readme</a>
-        </li>
-        <li>
-            <a href="/work">Work page</a>
-        </li>
-        <li>
-            <a href="/admin">Administration page</a>
-        </li>
-        <li>
-            <% if (login) { %>
-            <a href="/logout">Logout</a>
-            <% } else { %>
-            <a href="/login">Login</a>
-            <% } %>
-        </li>
-    </ul>
+    <div class="nav">
+        <ul>
+            <li>
+                <a href="/readme">Readme</a>
+            </li>
+            <li>
+                <a href="/work">Work page</a>
+            </li>
+            <li>
+                <a href="/admin">Administration page</a>
+            </li>
+            <li>
+                <% if (login) { %>
+                <a href="/logout">Logout</a>
+                <% } else { %>
+                <a href="/login">Login</a>
+                <% } %>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
