--- a/views/work.html
+++ b/views/work.html
@@ -27,19 +27,21 @@
     <p>
         Access other pages:
     </p>
-    <ul>
-        <li>
-            <a href="/readme">Readme</a>
-        </li>
-        <li>
-            <a href="/">Home page</a>
-        </li>
-        <li>
-            <a href="/admin">Administration page</a>
-        </li>
-        <li>
-            <a href="/logout">Logout</a>
-        </li>
-    </ul>
+    <div class="nav">
+        <ul>
+            <li>
+                <a href="/readme">Readme</a>
+            </li>
+            <li>
+                <a href="/">Home page</a>
+            </li>
+            <li>
+                <a href="/admin">Administration page</a>
+            </li>
+            <li>
+                <a href="/logout">Logout</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
