add both white list and black list endpoint control

--- a/views/introduction.html
+++ b/views/introduction.html
@@ -109,15 +109,20 @@
             "administrators/system",
             "administrators/website"
         ],
-        "endpoints": [
-            "df4d0d95-dc78-4d5a-8c87-63dddecdf6fe",
-            "bbff89de-93f3-4480-b969-c8ca6779c601"
-        ]
+        "endpoints": {
+            "whitelist": [
+                "df4d0d95-dc78-4d5a-8c87-63dddecdf6fe",
+                "bbff89de-93f3-4480-b969-c8ca6779c601"
+            ],
+            "blacklist": []
+        }
     }
 </code></pre>
                 <p>
-                    表示只有拥有“roles”角色列表中的角色，并且在标识为“endpoints”白名单中一个的端点上访问时，该网页才可以被允许访问。允许访问端点的标识则需根据具体测试环境在数据库的“endpoints”端点白名单中添加。
-                    允许访问的角色在“roles”添加，添加的角色由乙方系统定义。相应账户所拥有的角色在“user_roles”表中添加，其中每个条目的键值都对应于某一网账户的标识，其内容是该账户所拥有的角色列表。例如
+                    表示只有拥有“roles”角色列表中的角色，并且在被允许的端点上访问时，该网页才可以被允许访问。允许访问端点由“endpoints”中的黑名单列表“blacklist”和白名单列表“whitelist”同时控制。黑名单列表具有优先权，即一个端点的标识如果在黑名单中，
+                    则不管它是否在白名单中都是不允许访问的端点。关于“白名单”和“黑名单”设置与否时的详细逻辑可以在“OAuth2客户端库”中的 <code>isEndpointAllowed</code> 函数中找到。乙方也可以使用自己定义的逻辑。                   
+                    允许访问端点的标识则需根据具体测试环境在数据库的“endpoints”的白名单中添加，不允许的端点则在相应的黑名单中添加。允许访问的角色在“roles”添加，添加的角色由乙方系统定义。
+                    相应账户所拥有的角色在“user_roles”表中添加，其中每个条目的键值都对应于某一网账户的标识，其内容是该账户所拥有的角色列表。例如
                 </p>
 <pre><code>    "user_roles": {
         "c86415a6-2cd9-4e62-8c27-b8e1dfe02802": [
